--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         />
       </div>
       <div class="controls__btns">
-        <button id="jsMode">Fill</button>
-        <button id="jsSave">Save</button>
+        <button id="jsMode">채우기</button>
+        <button id="jsSave">저장</button>
       </div>
       <div class="controls__colors" id="jsColors">
         <div
